crates/vdf/tests/ui/escape_absent_without_feature.stderr
error[E0599]: no method named `into_inner_cloned` found for struct `VdfStateReadonly` in the current scope
  --> tests/ui/escape_absent_without_feature.rs:14:26
   |
14 |     let _escape = handle.into_inner_cloned();
   |                          ^^^^^^^^^^^^^^^^^ method not found in `VdfStateReadonly`

error[E0599]: no method named `test_set_step` found for struct `VdfStateReadonly` in the current scope
  --> tests/ui/escape_absent_without_feature.rs:15:26
   |
15 |     let _mutate = handle.test_set_step(1);
   |                          ^^^^^^^^^^^^^
   |
help: there is a method `get_step` with a similar name
   |
15 -     let _mutate = handle.test_set_step(1);
15 +     let _mutate = handle.get_step(1);
   |
